// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker renders agent marker correctly 1`] = `
<div>
  <div
    class="css-1oyht0a-MarkerContainer e1ttoyky0"
    style="left: 4.5px;"
  >
    <span
      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      id="agent-wrapper"
    >
      <div
        class="css-1ejn3a9-Container ex8slh61"
      >
        <span
          class="css-xbgcmn-Indicator ex8slh60"
          color="#8E9FBC"
          shape="circle"
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`Marker renders error marker correctly 1`] = `
<div>
  <div
    class="css-1oyht0a-MarkerContainer e1ttoyky0"
    style="left: 4.5px;"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      id="popover"
    >
      <div
        class="e1vxv0ng0 css-lzkl4t-Container-Button ex8slh61"
        data-test-subj="popover"
      >
        <span
          class="css-1p2bud6-Indicator ex8slh60"
          color="#C61E25"
          shape="square"
        />
      </div>
    </div>
  </div>
</div>
`;
